feat:인증부분 api연동 및 tronLink지갑 연동

--- a/src/ResetPassword.module.css
+++ b/src/ResetPassword.module.css
@@ -67,16 +67,34 @@
 .success { color: #50AF95; }
 
 /* 3. 확인 버튼 스타일 수정 (간격 및 크기 조정) */
-.fullButton {
+.fullButton1 {
     /* 중앙 정렬을 위해 block 설정 및 auto margin */
     display: block;
     margin: 20px auto 0 auto; /* 상단 간격을 80px로 크게 벌리고 중앙 정렬 */
     
     /* 버튼 크기 축소 (시안에 맞춰 조절) */
-    width: 100%; /* 가로 길이를 전체의 60% 정도로 축소 */
     
-    
+    width: 100%;
     height: 52px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #BFBFBF;
+    transition: all 0.3s ease;
+}
+
+.fullButton2 {
+    /* 중앙 정렬을 위해 block 설정 및 auto margin */
+    display: block;
+    margin: 60px auto 0 auto; /* 상단 간격을 80px로 크게 벌리고 중앙 정렬 */
+    
+    /* 버튼 크기 축소 (시안에 맞춰 조절) */
+    
+    width: 45%;
+    height: 40px;
     border: none;
     border-radius: 10px;
     color: white;
@@ -94,7 +112,6 @@
     color: #50AF95;
     font-size: 0.9rem;
     font-weight: bold;
-    margin-top: 40px; /* 라벨 위쪽 간격 증가 */
     margin-bottom: 8px; /* 라벨과 입력창 사이 간격 */
 }
 
@@ -155,7 +172,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 140px;
 }
 
 /* 로고 아이콘과 CrossPay 텍스트 가로 배치 */
